release/src/router/dbus-1.8.8/test/data/valid-messages/standard-service-exists.message
# Standard org.freedesktop.DBus.ServiceExists message

VALID_HEADER method_call
HEADER_FIELD PATH
TYPE OBJECT_PATH
OBJECT_PATH '/org/freedesktop/DBus'
HEADER_FIELD INTERFACE
TYPE STRING
STRING 'org.freedesktop.DBus'
HEADER_FIELD MEMBER
TYPE STRING
STRING 'ServiceExists'
HEADER_FIELD DESTINATION
TYPE STRING
STRING 'org.freedesktop.DBus'
HEADER_FIELD SIGNATURE
TYPE STRING
STRING 's'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE STRING
STRING 'org.freedesktop.DBus.Sample'
END_LENGTH Body
